# Proyecto_RAG_Web

./: README.md  pyproject.toml  requirements.txt  test_rag.py
app/: main.py
app/api/: chat.py
app/core/: config.py
app/data/faiss_index/: index.faiss  index.pkl
app/scripts/: index_products.py
app/services/: intent.py  laravel_client.py  laravel_service.py  llm.py  llm_service.py  rag_service.py  vectorstore.py
